# goldbach-gpu

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RESULTS.md
benchmarks/: bench_5.sh  bench_5a.sh  bench_5b.sh  bench_5c.sh  bench_gpu3.sh  bench_gpu3c.sh  extract_gpu3.py  extract_plot_data.sh  gpu3_results.csv  measure_variance.sh  plot_data.tex  run_benchmarks.sh
include/: goldbach_scheduler.hpp  prime_bitset.hpp
legacy/: goldbach_gpu.cu  goldbach_gpu2.cu  goldbach_gpu3.cu
src/: big_check.cpp  cpu_goldbach.cpp  goldbach.cu  goldbach_gpu.cu  goldbach_gpu2.cu  goldbach_gpu3.cu  goldbach_gpu3c.cu  goldbach_gpu5a.cu  goldbach_gpu5b.cu  goldbach_gpu5c.cu  prime_bitset.cpp  segmented_sieve.cpp  single_check.cu  test_bitset.cpp  test_sieve.cpp
tests/: validation.sh  validation_gpu.sh
